--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <title>Live Entertainment</title>
@@ -17,7 +17,7 @@
     
     <br>
     
-    <p>This is Fenway Park. Fenway Park is a major attraction for both baseball lovers and history loves, and has been in the city since 1912, making it the oldest baseball stadium in the country. In addition to watching baseball games, the stadium also offers tours due to its rich history. The Home of The Boston Red Sox, and the residence of the iconic Green Monster is arguably the Heart of Boston, so make sure to check it out!!!</p>
+    <p>This is Fenway Park. Fenway Park is a major attraction for both baseball lovers and history loves, and has been in the city since 1912, making it the oldest baseball stadium in the country. In addition to watching baseball games, the stadium also offers tours due to its rich history. The Home of The Boston Red Sox, and the residence of the iconic Green Monster is an extremely important part of Boston's history and culture, so make sure to check it out!!!</p>
     <img src="https://cdn.vox-cdn.com/thumbor/b680YaI4VA1lwtNYLkaR-7KMAGI=/0x0:4200x2798/1200x675/filters:focal(1764x1063:2436x1735)/cdn.vox-cdn.com/uploads/chorus_image/image/59217771/shutterstock_686863852.0.jpg">
     <a href="https://www.mlb.com/redsox/ballpark">Fenway Park Website</a>
     <br>
